--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -18,9 +18,10 @@
             android:id="@+id/btn_play"
             android:background="@color/lightGrey"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/spn_playerNumber"
-            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_marginEnd="72dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="316dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/spn_playerNumber" app:layout_constraintVertical_bias="0.0"/>
     <TextView
             android:text="CHAIN REACTION 2"
             android:textColor="@color/lightGrey"
@@ -31,19 +32,19 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView"/>
     <Spinner
-            android:layout_width="120dp"
+            android:layout_width="135dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/spn_mapSize" android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/spn_playerNumber" android:popupBackground="@color/colorPrimary"
-            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:id="@+id/spn_mapSize" android:layout_marginStart="36dp"
+            android:popupBackground="@color/colorPrimary"
+            android:layout_marginTop="140dp" app:layout_constraintTop_toBottomOf="@+id/textView"
             android:visibility="visible"/>
     <Spinner
-            android:layout_width="219dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/spn_playerNumber" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toEndOf="@+id/spn_mapSize" android:layout_marginStart="16dp"
-            app:layout_constraintHorizontal_bias="0.5" android:popupBackground="@color/colorPrimary"
-            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:visibility="visible"/>
+            android:id="@+id/spn_playerNumber"
+            android:popupBackground="@color/colorPrimary"
+            android:layout_marginTop="92dp" app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:visibility="visible" android:layout_marginStart="36dp"
+            app:layout_constraintStart_toStartOf="parent"/>
 </android.support.constraint.ConstraintLayout>
