--- a/app/src/main/res/layout/activity_medium_game.xml
+++ b/app/src/main/res/layout/activity_medium_game.xml
@@ -30,7 +30,7 @@
 
             android:layout_marginTop="8dp" android:id="@+id/tableLayout">
         <View
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="1dp"
                 android:background="@color/gridColor"
         />
