--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -47,4 +47,11 @@
             android:layout_marginTop="92dp" app:layout_constraintTop_toBottomOf="@+id/textView"
             android:visibility="visible" android:layout_marginStart="36dp"
             app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="Multiplayer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnMultiplayer" android:layout_marginTop="96dp"
+            app:layout_constraintTop_toBottomOf="@+id/spn_mapSize" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="36dp"/>
 </android.support.constraint.ConstraintLayout>
