--- a/app/src/main/res/layout/activity_large_game.xml
+++ b/app/src/main/res/layout/activity_large_game.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".gameActivity.LargeGameActivity">
+        tools:context=".gameActivity.view.LargeGameActivity">
 
     <TextView
             android:text="Large Game"
